# Mely-AI

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  HEARTBEAT.md  README.md  USER.md  character_workbench_product_spec.html  character_workbench_spec_final_v2.html  index.html  package-lock.json  package.json  progress.html  tailwind.config.ts  vite.config.ts
backend/: entry.py  mely_backend.spec  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  archive.py  characters.py  chat.py  costumes.py  datasets.py  downloads.py  engine.py  exports.py  generations.py  health.py  llm.py  llm_datasets.py  llm_models.py  llm_preferences.py  llm_runtime.py  llm_training.py  profile.py  prompt.py  setup.py  tasks.py  training.py  visual_datasets.py  visual_training.py  voice.py
backend/app/config/: model_registry.json
backend/app/core/: paths.py  settings.py
backend/app/db/: connection.py  migrations.py
backend/app/schemas/: archive.py  batch.py  characters.py  costume.py  engine.py  export.py  generations.py  profile.py  prompt.py  voice.py
backend/migrations/: 0001_initial_schema.sql  0002_download_tasks.sql  0003_training_jobs.sql  0004_dataset_reports.sql  0005_voice_assets_extend.sql  0007_exports.sql  0008_llm_tables.sql  0009_visual_training.sql  0010_character_default_base_model.sql  0011_chat_base_model_name.sql  0012_chat_message_images_json.sql  0013_backfill_legacy_chat_base_models.sql  0014_character_profile_memory.sql  0015_llm_training_monitoring_fields.sql
backend/scripts/: validate_llm_pipeline.py
backend/tests/: conftest.py  test_batch_generation.py  test_bootstrap.py  test_characters_api.py  test_chat.py  test_cors.py  test_costume_api.py  test_costume_service.py  test_dataset_api.py  test_downloads_api.py  test_engine_api.py  test_engine_runtime.py  test_export_api.py  test_generation_archive.py  test_generation_contract_api.py  test_gpu_mutex.py  test_health.py  test_history_gallery.py  test_llm_api.py  test_llm_base_models.py  test_llm_datasets.py  test_llm_models.py  test_llm_runtime_manager.py  test_llm_training.py  test_llm_training_runner.py  test_memory_extraction_service.py  test_mock_generation_archive.py  test_pdf_export.py  test_prepare_tauri_backend.py  test_profile_api.py  test_prompt_api.py  test_prompt_assembler.py  test_proof_service.py  test_setup.py  test_task_queue_api.py  test_task_queue_service.py  test_training_api.py  test_training_api_mock_contract.py  test_tts_runtime.py  test_verify_import_chain.py  (+6 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: windows-training-release-artifacts.txt
src-tauri/src/: main.rs
(+267 files in other folders)
