[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mely-backend"
version = "0.1.0"
description = "FastAPI backend for Mely AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<0.28",
  "pillow>=10.4,<12.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "reportlab>=4.2,<5.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0"
]
gpu-training = [
  "unsloth>=2026.4.4,<2027.0",
  "torch>=2.10.0,<2.11",
  "datasets>=4.3.0,<4.4",
  "transformers>=5.5.0,<5.6",
  "trl>=0.24.0,<0.25"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
